tests/paczka1/fuzzy1/69017259.err
Error in line 5: gJnltuA29692,3
Error in line 6: FCIraIAzqw6 A296 69,5
Error in line 3: gJnltu S40 67,4
Error in line 11: gJnltu A28 58,1
Error in line 8: FCIraIAzqw6 A28 35,2
Error in line 32: ZbjUbTczA A467 288,81
Error in line 31: A296 S40 96,6
